--- a/k8s/overlays/intergration/kustomization.yaml
+++ b/k8s/overlays/intergration/kustomization.yaml
@@ -10,7 +10,7 @@ patches:
   - path: patches/deployment.yaml
 
 images:
-  - name: ghcr.io/lootopia-org/core
+  - name: ghcr.io/wookiesrpeople2/todo-api-node:intergration
     newTag: int
 
 
