--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -281,7 +281,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=tag
             type=sha
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest
 
       - name: Build and push Docker image
         id: build
