--- a/k8s/overlays/production/patches/deployment.yaml
+++ b/k8s/overlays/production/patches/deployment.yaml
@@ -8,8 +8,9 @@ spec:
     spec:
       containers:
         - name: todo
-          env:
-            - name: ENV
-              value: "production"
-
+          envFrom:
+            - configMapRef:
+                name: todo-config
+            - secretRef:
+                name: todo-secrets
 
