--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "flagsmith-nodejs": "^8.0.0",
+    "pino": "^10.3.1",
     "sql.js": "^1.6.0",
     "swagger-ui-express": "^5.0.1"
   },
@@ -27,6 +28,7 @@
     "jest": "^29.0.0",
     "k6": "^0.0.0",
     "knip": "^5.85.0",
+    "pino-pretty": "^13.1.3",
     "supertest": "^6.3.0"
   }
 }
