--- a/.github/workflows/argocd.yaml
+++ b/.github/workflows/argocd.yaml
@@ -94,6 +94,15 @@ jobs:
 
             echo "${{ vars.TEMPLATE }}" | kubectl apply -f -
 
+            if ! kubectl get crd rollouts.argoproj.io >/dev/null 2>&1; then
+              echo "Argo Rollouts CRD (rollouts.argoproj.io) not found in the cluster."
+              echo "Skipping: kubectl argo rollouts ..."
+              echo "Fix options:"
+              echo "  - Install Argo Rollouts in the cluster and deploy kind: Rollout resources"
+              echo "  - Or remove Rollouts usage and use standard Deployments"
+              exit 0
+            fi
+
             if [ "${{ inputs.canary_weight }}" -lt 100 ]; then
               kubectl argo rollouts set image "$ROLLOUT_NAME" \
                 "${ROLLOUT_CONTAINER}=${FULL_IMAGE}" \
@@ -148,6 +157,12 @@ jobs:
 
               export PATH="$HOME/.local/bin:$PATH"
               echo "Installed kubectl-argo-rollouts (${VERSION})"
+            fi
+
+            if ! kubectl get crd rollouts.argoproj.io >/dev/null 2>&1; then
+              echo "Argo Rollouts CRD (rollouts.argoproj.io) not found in the cluster."
+              echo "Skipping: kubectl argo rollouts undo ..."
+              exit 0
             fi
 
             kubectl argo rollouts undo "$ROLLOUT_NAME" -n "$NAMESPACE"
