chore: fix deployment

--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -5,6 +5,9 @@ resources:
   - deployment.yaml
   - service.yaml
 
+configurations:
+  - kustomizeconfig.yaml
+
 commonLabels:
   app.kubernetes.io/name: todo
 
