--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: todo
   labels:
@@ -21,7 +21,7 @@ spec:
           image: ghcr.io/wookiesrpeople2/todo-api-node:latest
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           env:
             - name: ENV
               value: "base"
@@ -32,12 +32,11 @@ spec:
             limits:
               cpu: "100m"
               memory: "512Mi"
-    strategy:
-      canary:
-        canaryService: todo-canary
-        stableService: todo-stable
-        steps:
-          - setWeight: 20
-          - pause: { duration: 60s }
-          - setWeight: 100
-
+  strategy:
+    canary:
+      stableService: todo-stable
+      canaryService: todo-canary
+      steps:
+        - setWeight: 20
+        - pause: { duration: 60s }
+        - setWeight: 100
