--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -10,4 +10,30 @@ spec:
       port: 80
       targetPort: 3000
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: todo-stable
+spec:
+  selector:
+    app: todo
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: todo-canary
+spec:
+  selector:
+    app: todo
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+
 
