--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "knip": "knip"
   },
   "dependencies": {
+    "@sentry/node": "^10.40.0",
     "express": "^4.17.1",
-    "pino": "^10.3.1",
     "flagsmith-nodejs": "^8.0.0",
+    "pino": "^10.3.1",
     "sql.js": "^1.6.0",
     "swagger-ui-express": "^5.0.1"
   },
