--- a/k8s/base-rollout/kustomization.yaml
+++ b/k8s/base-rollout/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment.yaml
+  - rollout.yaml
   - service.yaml
 
 configurations:
@@ -12,5 +12,4 @@ labels:
   - pairs:
       app.kubernetes.io/name: todo
     includeSelectors: true
-
 
