--- a/k8s/overlays/development-deployment/patches/deployment.yaml
+++ b/k8s/overlays/development-deployment/patches/deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: todo
 spec:
@@ -13,5 +13,4 @@ spec:
                 name: todo-config
             - secretRef:
                 name: todo-secrets
-
 
