--- a/k8s/overlays/production/kustomization.yaml
+++ b/k8s/overlays/production/kustomization.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base
+  - ../../base-rollout
 
 namespace: production
 
 nameSuffix: -prod
 
 patches:
-  - path: patches/deployment.yaml
+  - path: patches/rollout.yaml
 
 images:
   - name: ghcr.io/wookiesrpeople2/todo-api-node:latest
