--- a/k8s/rollout/overlays/production/patches/rollout.yaml
+++ b/k8s/rollout/overlays/production/patches/rollout.yaml
@@ -8,6 +8,7 @@ spec:
     spec:
       containers:
         - name: todo
+          image: ghcr.io/wookiesrpeople2/todo-api-node:latest
           envFrom:
             - configMapRef:
                 name: todo-config
