--- a/k8s/deployment/overlays/production/kustomization.yaml
+++ b/k8s/deployment/overlays/production/kustomization.yaml
@@ -2,17 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base-rollout
+  - ../../base
 
-namespace: staging
+namespace: production
 
-nameSuffix: -int
+nameSuffix: -prod
 
 patches:
-  - path: patches/rollout.yaml
+  - path: patches/deployment.yaml
 
 images:
   - name: ghcr.io/wookiesrpeople2/todo-api-node:latest
-    newTag: intergration
-
+    newTag: main
 
