--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -344,6 +344,15 @@ jobs:
       image_tag: ${{ needs.build-and-push.outputs.image-digest }}
     secrets: inherit
 
+  rollback:
+    name: Rollback on failure
+    runs-on: ubuntu-latest
+    needs: [deploy-development, deploy-staging, deploy-production-canary, deploy-production]
+    if: failure()
+    steps:
+      - name: Rollback triggered
+        run: echo "Rollback handled by argocd.yaml reusable workflow per environment"
+
   sync-feature-flags:
     name: Sync Feature Flags
     runs-on: ubuntu-latest
@@ -365,7 +374,7 @@ jobs:
             echo "key=${{ secrets.FLAGSMITH_KEY_DEVELOPMENT }}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Sync flags to Flagsmith
+      - name: Sync flags to flagsmith
         env:
           FLAGSMITH_KEY: ${{ steps.config.outputs.key }}
           ENVIRONMENT: ${{ steps.config.outputs.env }}
