--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -321,7 +321,7 @@ jobs:
     secrets: inherit
 
   deploy-production-canary:
-    name: Deploy to Production (Canary 20%)
+    name: Deploy to Production (canary 20%)
     needs: build-and-push
     if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/argocd.yaml
