--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -399,7 +399,13 @@ jobs:
     name: Notify Discord
     runs-on: ubuntu-latest
     needs: [deploy-development, deploy-staging, deploy-production-canary, deploy-production]
-    if: always()
+    if: |
+      always() && (
+        needs.deploy-development.result != 'skipped' ||
+        needs.deploy-staging.result != 'skipped' ||
+        needs.deploy-production-canary.result != 'skipped' ||
+        needs.deploy-production.result != 'skipped'
+      )
     steps:
       - name: Notify Discord
         env:
