--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -344,15 +344,6 @@ jobs:
       image_tag: ${{ needs.build-and-push.outputs.image-digest }}
     secrets: inherit
 
-  # rollback:
-  #   name: Rollback on failure
-  #   runs-on: ubuntu-latest
-  #   needs: [deploy-development, deploy-staging, deploy-production-canary, deploy-production]
-  #   if: failure()
-  #   steps:
-  #     - name: Rollback triggered
-  #       run: echo "Rollback handled by argocd.yaml reusable workflow per environment"
-
   sync-feature-flags:
     name: Sync Feature Flags
     runs-on: ubuntu-latest
@@ -411,13 +402,19 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: |
-          STATUS="${{ job.status }}"
-          COLOR=3066993   # green
-          EMOJI="✅"
-
-          if [ "$STATUS" != "success" ]; then
-            COLOR=15158332  # red
+          if [[ \
+            "${{ needs.deploy-development.result }}" == "failure" || \
+            "${{ needs.deploy-staging.result }}" == "failure" || \
+            "${{ needs.deploy-production-canary.result }}" == "failure" || \
+            "${{ needs.deploy-production.result }}" == "failure" \
+          ]]; then
+            STATUS="failure"
+            COLOR=15158332
             EMOJI="❌"
+          else
+            STATUS="success"
+            COLOR=3066993
+            EMOJI="✅"
           fi
 
           curl -H "Content-Type: application/json" \
