--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -389,12 +389,11 @@ jobs:
   notify-discord:
     name: Notify Discord
     runs-on: ubuntu-latest
-    needs: [deploy-development, deploy-staging, deploy-production-canary, deploy-production]
+    needs: [deploy-development, deploy-staging,  deploy-production]
     if: |
       always() && (
         needs.deploy-development.result != 'skipped' ||
         needs.deploy-staging.result != 'skipped' ||
-        needs.deploy-production-canary.result != 'skipped' ||
         needs.deploy-production.result != 'skipped'
       )
     steps:
@@ -405,7 +404,6 @@ jobs:
           if [[ \
             "${{ needs.deploy-development.result }}" == "failure" || \
             "${{ needs.deploy-staging.result }}" == "failure" || \
-            "${{ needs.deploy-production-canary.result }}" == "failure" || \
             "${{ needs.deploy-production.result }}" == "failure" \
           ]]; then
             STATUS="failure"
