--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -320,21 +320,21 @@ jobs:
       image_tag: ${{ needs.build-and-push.outputs.image-digest }}
     secrets: inherit
 
-  # deploy-production-canary:
-  #   name: Deploy to Production (canary 20%)
-  #   needs: build-and-push
-  #   if: github.ref == 'refs/heads/main'
-  #   uses: ./.github/workflows/argocd.yaml
-  #   with:
-  #     environment: production
-  #     use_rtemplate: true
-  #     canary_weight: 20
-  #     image_tag: ${{ needs.build-and-push.outputs.image-digest }}
-  #   secrets: inherit
+  deploy-production-canary:
+    name: Deploy to Production (canary 20%)
+    needs: build-and-push
+    if: github.ref == 'refs/heads/main'
+    uses: ./.github/workflows/argocd.yaml
+    with:
+      environment: production
+      use_rtemplate: true
+      canary_weight: 20
+      image_tag: ${{ needs.build-and-push.outputs.image-digest }}
+    secrets: inherit
 
   deploy-production:
     name: Deploy to Production (Full)
-    # needs: deploy-production-canary
+    needs: deploy-production-canary
     if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/argocd.yaml
     with:
@@ -389,11 +389,12 @@ jobs:
   notify-discord:
     name: Notify Discord
     runs-on: ubuntu-latest
-    needs: [deploy-development, deploy-staging,  deploy-production]
+    needs: [deploy-development, deploy-staging, deploy-production-canary, deploy-production]
     if: |
       always() && (
         needs.deploy-development.result != 'skipped' ||
         needs.deploy-staging.result != 'skipped' ||
+        needs.deploy-production-canary.result != 'skipped' ||
         needs.deploy-production.result != 'skipped'
       )
     steps:
@@ -404,6 +405,7 @@ jobs:
           if [[ \
             "${{ needs.deploy-development.result }}" == "failure" || \
             "${{ needs.deploy-staging.result }}" == "failure" || \
+            "${{ needs.deploy-production-canary.result }}" == "failure" || \
             "${{ needs.deploy-production.result }}" == "failure" \
           ]]; then
             STATUS="failure"
